<resources>
    <string name="weather_live">Real-time</string>
    <string name="weather_forecast">Forecast</string>
    <string name="map_2d">2D-MAP</string>
    <string name="map_3d">3D-MAP</string>
    <string name="map_satellite">Satellite-MAP</string>
    <string name="base_station_location">CellTrack</string>
    <string name="gps_location">GPS</string>
    <string name="wifi_location">WIFI</string>
    <string name="app_name">Huaying Children APP</string>
    <string name="action_settings">Settings</string>
    <string name="qrcode_top_hint">Scan the qr code on the reverse of the watch</string>
    <string name="qrcode_bottom_hint">Scan the qr code on the reverse of the watch</string>
    <string name="loading_text">loading...</string>
    <string name="function_name_position">Location</string>
    <string name="function_name_msg">Message</string>
    <string name="function_name_helthy">Health</string>
    <string name="function_name_discover">Discover</string>
    <string name="function_name_dear">baby</string>
    <string name="homepage_button_text">Join Huaying</string>
    <string name="homepage_button_text_new">Enter Huaying</string>
    <string name="register_button_text">Register Finish</string>
    <string name="register_top_text">In order to facilitate the communication with baby, please verify your phone number</string>
    <string name="get_sms_code">Get CAPTCHA</string>
    <string name="again_sms_code">Resend CAPTCHA</string>
    <string name="register_title_text">Register</string>
    <string name="bindwatch_title_text">Add Watch</string>
    <string name="bindwatch_qrcode_text">Sweep QR code bind</string>
    <string name="bindwatch_imei_text">IMEI bind</string>
    <string name="bindwatch_hint_text">Please make sure the watch is boot before binding</string>
    <string name="bindwatch_imei_hint_text">Note: watch binding number on the back of the 15 Numbers</string>
    <string name="bindwatch_imei_edit_hint_text">Please enter the IMEI number</string>
    <string name="bindwatch_imei_button_text">Binding</string>
    <string name="login_button_text">Login</string>
    <string name="login_top_hint_text">You are registered user, please login directly</string>
    <string name="login_edit_hint_text">Please input 6~16 digits or letters</string>
    <string name="login_tv_forget">forget the password?</string>
    <string name="reset_pwd_button_text">Login</string>
    <string name="reset_pwd_top_text">Verification code has been sent to...</string>
    <string name="reset_pwd_title_text">Reset Password</string>
    <string name="reset_pwd_edit_hint_text">Enter 6 to 16 new password</string>
    <string name="reset_pwd_sms_code">Resend verification code</string>
    <string name="reset_pwd_and_login">To reset the password and log in</string>
    <string name="family_select_title_text">The relationship between you and the baby</string>
    <string name="baby_info_title_text">Baby Information </string>
    <string name="baby_info_head_text">Avatar </string>
    <string name="baby_info_name_text">nickname</string>
    <string name="baby_info_sex_text">sex</string>
    <string name="baby_info_phone_text">watch phonenumber</string>
    <string name="baby_info_birthday_text">Birthday</string>
    <string name="map_call_phone_button_text">call up</string>
    <string name="map_navigation_button_text">Navigation</string>
    <string name="map_monitor_button_text">listening</string>
    <string name="vaccine_title_text">宝贝1的疫苗接种情况</string>
    <string name="vaccine_detail_state">接种状态</string>
    <string name="vaccine_detail_date">接种日期</string>
    <string name="vaccine_detail_describe">疫苗介绍</string>
    <string name="dear_text_insurance">保险</string>
    <string name="dear_text_education">教育</string>
    <string name="dear_text_expect">敬请期待</string>
    <string name="dear_button_release_bound">remove binding</string>
    <string name="dear_title_text">baby</string>
    <string name="dear_title_notelephone">No telephone</string>
    <string name="alarm_title_text">alarm clock</string>
    <string name="alarm_bottom_button_text">Add a new alarm clock</string>
    <string name="alarm_set_alarm">Edit the alarm clock</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="everyday">Everyday</string>
    <string name="no_repeat">NORepeat</string>
    <string name="week">W</string>
    <string name="remind_to">Remind to</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="morning">am</string>
    <string name="afternoon">pm</string>
    <string name="family_member_title_text">family members </string>
    <string name="family_member_baby_text">baby</string>
    <string name="family_member_parents_text">parents</string>
    <string name="family_member_button_bottom">Add new parents</string>
    <string name="family_member_button_text1">Relationship or name</string>
    <string name="family_member_button_text2">Administrator Settings</string>
    <string name="family_member_button_text3">Delete contact</string>
    <string name="not_disturb_title_text">Watch free time alone</string>
    <string name="not_disturb_set_disturb">Editors not disturb time</string>
    <string name="not_disturb_start_time">start time</string>
    <string name="not_disturb_end_time">end time</string>
    <string name="location_mode_title_text">location mode</string>
    <string name="location_mode_low">power saving mode</string>
    <string name="location_mode_mid">normal mode</string>
    <string name="location_mode_high">High Frequent Mode</string>
    <string name="location_mode_explain_low">Location low frequency</string>
    <string name="location_mode_explain_mid">Location normal frequency</string>
    <string name="location_mode_explain_high">Location high frequency</string>
    <string name="add_family_member_text1">New parents to join the family as follows：</string>
    <string name="add_family_member_text2">Scan the QR code</string>
    <string name="add_family_member_text3">Manual Input IMEI</string>
    <string name="add_family_member_title_text">Add new parents</string>
    <string name="msg_system_list_title">system messages</string>
    <string name="insurance_title_text">儿童意外、重疾综合保险方案</string>
    <string name="insurance_first_text_1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;本保险由中国大地财产保险股份有限公司营业部承保；深圳市华英智联通信技术有限公司已为您出资支付了本保险的保险费，无需您再支付保险费。</string>
    <string name="insurance_first_text_2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;如您为宝贝的监护人且同意领取该保险，请点击立即投保录入保险信息。</string>
    <string name="insurance_first_text_3">投保年龄：3-14周岁</string>
    <string name="insurance_first_text_4">保险期间：1年；孩子身体健康</string>
    <string name="insurance_second_text_title">保险方案：</string>
    <string name="insurance_second_text_content_up">1、投保时年龄在三周岁至十四周岁间（含）,身体健康，能正常生活的儿童，可作为被保险人；</string>
    <string name="insurance_second_text_content_mid">2、保险期间：1年；宝贝身体健康保险期间以保险公司出具的保险单上列明的期间为准。</string>
    <string name="insurance_second_text_content_bottom">3、一份保险保障包括以下：</string>
    <string name="insurance_describe_top">如投保前儿童已患有所列12种重大疾病或患有与所列重大疾病有直接因果关系的疾病，请不要投保，否则不能得到理赔；</string>
    <string name="insurance_describe_mid">每一儿童使用一个或一个以上手机、手表产品的，保险公司对同一被保险人承担的保险责任以一份为限，超过部分不承担保险责任。</string>
    <string name="insurance_describe_uper">上述保险责任及保险金额属于条款中的部分内容，如有冲突，以本方案为准；条款中的其它保险责任不适用于本保险。</string>
    <string name="insurance_describe_bottom">除外责任及未尽事项以条款为准。</string>
    <string name="insurance_content_t_1">＊保险期间以保险公司出具的保险单为准。</string>
    <string name="insurance_describe_get_confirm">如您是儿童的监护人且同意领取该保险，请点击“立即投保”</string>
    <string name="insurance_first_button_text">立即投保</string>
    <string name="insurance_complete_title">您的投保已完成</string>
    <string name="insurance_complete_date_des_top">保单详情可在10个工作日后登录中国大地官方</string>
    <string name="insurance_complete_date_des_bottom">网站或拨打热线电话进行查询</string>
    <string name="insurance_complete_report_title">全国客户服务及理赔报案电话：</string>
    <string name="insurance_complete_report_number">95590</string>
    <string name="insurance_complete_title_dadi">大地官网</string>
    <string name="insurance_complete_title_dadi_link_title">＊大地官网链接：</string>
    <string name="insurance_complete_dadi_link_content">www.95590.cn</string>
    <string name="edit_insurance_text_parent_info">投保人信息</string>
    <string name="edit_insurance_text_baby_info">儿童(被保险人)信息</string>
    <string name="edit_insurance_text_baby_info2">投保年龄为3-14周岁</string>
    <string name="edit_insurance_button_text">确认并投保</string>
    <string name="system_setting_title_text">System Settings</string>
    <string name="system_setting_button_logoff">Logout</string>
    <string name="system_setting_feedback">Feedback</string>
    <string name="system_setting_question">Instructions</string>
    <string name="system_setting_app_update">Check Updata</string>
    <string name="system_setting_app_about">About Huaying</string>
    <string name="feedback_title_text">Feedback</string>
    <string name="feedback_edit_text_hint">Please enter your comments or Suggestions</string>
    <string name="sos_setting_title_text">SOS Settings</string>
    <string name="sos_setting_hint_top">You can set up three SOS emergency contacts</string>
    <string name="education">education</string>
    <string name="save_fence">SR Series</string>
    <string name="save_edit_fence">Edit the security fence</string>
    <string name="save_fence_set">Set the activity area of the baby</string>
    <string name="save_fence_hint">When baby arrive or leave, you will receive notification of baby</string>
    <string name="authentication_title">实名认证</string>
    <string name="authentication_text_1">您的手表使用的是联通套餐，需要进行实名认证，才能正常使用。</string>
    <string name="authentication_text_2">1.手表与联通卡脱离超过3天，将停止联通服务。</string>
    <string name="authentication_text_3">2. 需上传真实身份证，我们将在24小时之内完成审核。</string>
    <string name="authentication_text_4">拍照时请确保姓名、证件号码等信息清晰可见</string>
    <string name="authentication_text_5">拍照时请确保签发机关、有效期限等信息清晰可见</string>
    <string name="authentication_text_6">请上传本人手持身份证照片，保证人像五官和身份证照片清晰可见</string>
    <string name="authentication_text_hint">Id information in the audit, please be patient</string>
    <string name="history_track_title">historical route</string>
    <string name="history_track_play">Play track</string>
    <string name="input_nickname_hint">Limit 2 - seven words It is prohibited to use illegal nickname</string>
    <string name="str_ok">OK</string>
    <string name="dialog_birthday_selector_title">生日</string>
    <string name="grow_record">Growth record </string>
    <string name="grow_height_curve">Height curve</string>
    <string name="grow_weight_curve">Weight curve</string>
    <string name="debug_version_name">1.0.0</string>
    <string name="title_add_grow_record">Modify the growth record</string>
    <string name="title_modify_grow_record">Modify the growth record</string>
    <string name="save">Save</string>
    <string name="limit_numbers">0123456789.</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="move_up_to_cancel">Fingers slide, cancel sending</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="release_to_cancel">Loosen the fingers, to cancel sending</string>
    <string name="promote_center_text_waite">Your message has been sent, please be patient</string>
    <string name="str_send">Send</string>
    <string name="str_home_title">Residence</string>
    <string name="str_take_picture">Photo upload</string>
    <string name="str_local_picture">Local image upload</string>
    <string name="child_qa__describe">儿童百科知识是丰富儿童大脑知识储库的重要来源。和孩子玩知识问答游戏，让孩子在游戏中一天天长大和进步。</string>
    <string name="pre_school">学龄前</string>
    <string name="post_school">学龄后</string>
    <string name="qa_level_choice">难度选择</string>
    <string name="baby_info_hint">NULL</string>
    <string name="baby_info_boy">boy</string>
    <string name="baby_info_girl">girl</string>
    <string name="clear">clear</string>
</resources>