<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="@dimen/dialog_min_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/shape_button_white_normal"
        android:minWidth="@dimen/dialog_min_width"
        android:orientation="vertical">


        <Button
            android:id="@+id/edit_relation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/family_member_button_text1"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/dialog_button_text_size" />


        <Button
            android:id="@+id/set_manger"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/family_member_button_text2"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/dialog_button_text_size" />


        <Button
            android:id="@+id/delete_member"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/family_member_button_text3"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/dialog_button_text_size" />


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1.0"
            android:background="@drawable/dialog_button_bottom_selector"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/dialog_button_text_size" />


    </LinearLayout>
</RelativeLayout>
